--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -122,18 +122,20 @@
 
   <%# 商品一覧 %>
   <div class='item-contents'>
-    <h2 class='title'>ピックアップカテゴリー</h2>
-    <%= link_to '新規投稿商品', "#", class: "subtitle" %>
-    <ul class='item-lists'>
-
+     <h2 class='title'>ピックアップカテゴリー</h2>
+     <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
+     <ul class='item-lists'>
+      
+      <% @items.each do |item| %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item.id),class:'list', method: :get do %>
         <div class='item-img-content'>
           <%= image_tag "item-sample.png", class: "item-img" %>
+        <% end %>
 
           <%# 商品が売れていればsold outの表示 %>
-          <div class='sold-out'>
+          <div class='sold-out'> 
             <span>Sold Out!!</span>
           </div>
           <%# //商品が売れていればsold outの表示 %>
@@ -151,8 +153,8 @@
             </div>
           </div>
         </div>
-        <% end %>
       </li>
+      <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合のダミー %>
@@ -172,11 +174,11 @@
             </div>
           </div>
         </div>
-        <% end %>
       </li>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# //商品がない場合のダミー %>
     </ul>
+    <% end %>
   </div>
   <%# //商品一覧 %>
 </div>
@@ -184,6 +186,6 @@
   <span class='purchase-btn-text'>出品する</span> 
     <%= link_to new_item_path , class: 'purchase-btn-text', method: :get do %>
       <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-    <% end %>
+  <% end %>
 </div>
 <%= render "shared/footer" %>
