購入後の表示関係

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -135,9 +135,11 @@
         <% end %>
 
           <%# 商品が売れていればsold outの表示 %>
-          <div class='sold-out'> 
-            <span>Sold Out!!</span>
-          </div>
+          <% if item.management != nil %> 
+            <div class='sold-out'> 
+              <span>Sold Out!!</span>
+            </div>
+          <% end %>
           <%# //商品が売れていればsold outの表示 %>
 
         </div>
