--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,9 +9,11 @@
     <div class='item-img-content'>
       <%= image_tag @item.image.variant(resize:'600x600'),class:'item-img-content' if @item.image.attached? %>
       <%# 商品が売れている場合は、sold outの表示をしましょう。 %>
-      <div class='sold-out'>
-        <span>Sold Out!!</span>
-      </div>
+      <% if @item.management != nil %> 
+        <div class='sold-out'>
+          <span>Sold Out!!</span>
+        </div> 
+      <% end %>
       <%# //商品が売れている場合は、sold outの表示をしましょう。 %>
     </div>
     <div class="item-price-box">
@@ -28,8 +30,9 @@
       <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
       <p class='or-text'>or</p>
       <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
-    <% else %>
+    <% elsif @item.management == nil %>
       <%= link_to '購入画面に進む', item_orders_path(@item.id),class:"item-red-btn"%>
+    <% else %>
     <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
